--- a/templates/accounts/person_login.html
+++ b/templates/accounts/person_login.html
@@ -26,13 +26,24 @@
             {% csrf_token %}
 
 
+            <div class="field">
+                <div class="input-container control">
+                   <p class="help is-danger">{% for message in messages %}{{ message }}</p> {% endfor %} 
+                </div>
+                <div class="input-container control">
 
-
-
-    <div class="field"><div class="input-container control">
-
-</div>{{form.email  }}{% for error in form.email.errors %}<p class="help is-danger">{{error}}</p> {% endfor %}</div><div class="field"><div class="input-container control">{{ form.password }}</div>{% for error in form.password.errors %}<p class="help is-danger">{{error}}</p> {% endfor %}</div>
- <center><button class="mb-5 btn-primary btn px-5" name="login" type="submit">Login</button></center>
+                    {{form.email }}{% for error in form.email.errors %}<p class="help is-danger">{{error}}</p> {% endfor
+                    %}
+                </div>
+            </div>
+                <div class="field">
+                    <div class="input-container control">{{ form.password }}
+                    {% for error in form.password.errors %}<p class="help is-danger">{{error}}</p> {% endfor %}
+                    </div>
+                </div>
+            <center>
+                <button class="mb-5 btn-primary btn px-5" name="login" type="submit">Login</button>
+            </center>
         </form>
 
 
