--- a/templates/accounts/person_login.html
+++ b/templates/accounts/person_login.html
@@ -28,12 +28,13 @@
 
             <div class="field">
                 <div class="input-container control">
-                   <p class="help is-danger">{% for message in messages %}{{ message }}</p> {% endfor %} 
+                    {% if messages %}
+                   <p class="help is-danger">{% for message in messages %}{{ message }} {% endfor %} </p>
+                    {% endif %}
                 </div>
                 <div class="input-container control">
 
-                    {{form.email }}{% for error in form.email.errors %}<p class="help is-danger">{{error}}</p> {% endfor
-                    %}
+                    {{form.email }}{% for error in form.email.errors %}<p class="help is-danger">{{error}}</p> {% endfor %}
                 </div>
             </div>
                 <div class="field">
