--- a/templates/accounts/person_login.html
+++ b/templates/accounts/person_login.html
@@ -22,19 +22,19 @@
 
 </div>
 
-        <form class="my-form" action="{% url 'accounts:person_login'%}" method="post">
+        <form id="my-form" class="my-form" action="{% url 'accounts:person_login'%}" method="post">
             {% csrf_token %}
 
 
             <div class="field">
                 <div class="input-container control">
-                    {% if messages %}
-                   <p class="help is-danger">{% for message in messages %}{{ message }} {% endfor %} </p>
-                    {% endif %}
+                    <p id="mesg"></p>
+                   <p class="help is-danger">{% for message in messages %}{{ message }}</p> {% endfor %} 
                 </div>
                 <div class="input-container control">
 
-                    {{form.email }}{% for error in form.email.errors %}<p class="help is-danger">{{error}}</p> {% endfor %}
+                    {{form.email }}{% for error in form.email.errors %}<p class="help is-danger">{{error}}</p> {% endfor
+                    %}
                 </div>
             </div>
                 <div class="field">
