--- a/templates/accounts/person_login.html
+++ b/templates/accounts/person_login.html
@@ -33,8 +33,7 @@
                 </div>
                 <div class="input-container control">
 
-                    {{form.email }}{% for error in form.email.errors %}<p class="help is-danger">{{error}}</p> {% endfor
-                    %}
+                    {{form.email }}{% for error in form.email.errors %}<p class="help is-danger">{{error}}</p> {% endfor %}
                 </div>
             </div>
                 <div class="field">
