--- a/templates/accounts/person_login.html
+++ b/templates/accounts/person_login.html
@@ -28,7 +28,7 @@
 
             <div class="field">
                 <div class="input-container control">
-                    <p id="mesg"></p>
+                    <div id="mesg"></div>
                    <p class="help is-danger">{% for message in messages %}{{ message }}</p> {% endfor %} 
                 </div>
                 <div class="input-container control">
