--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -98,8 +98,8 @@
                 {% if article.image %}
                 <img src= alt="Hi!" />
 
-                <a href="{% static 'media/blog_images/article.image' %}" target="_blank">
-                    <img class="card-img-top" src="{% static 'media/blog_images/article.image' %}" width="100px" height="250px" alt="supportingimage">
+                <a href='media/blog_images/article.image' target="_blank">
+                    <img class="card-img-top" src='media/blog_images/article.image' width="100px" height="250px" alt="supportingimage">
                     
                 </a>
                 {% endif %}
