--- a/templates/blog/articledetail.html
+++ b/templates/blog/articledetail.html
@@ -12,7 +12,7 @@
 </div>
 {% endfor %}
 {% endif %}
-<div class="container my-5" style="height:150vh;margin;max-width:90%">
+<div class="container my-5" style="height:150vh;margin;max-width:90%;min-height:90%;">
 
 <div class="row">
     {% if article.image %}
