--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -14,7 +14,7 @@
 {% endfor %}
 {% endif %}
 
-<div class="container" style="min-height:90%;margin:0 auto;max-height:90%">
+<div class="container" style="min-height:90%;height:100vh;margin:0 auto;width:85%">
 
     <div class="row">
 
@@ -55,7 +55,7 @@
 
 
             </a>
-                <small>Created: {{todo.created}}</small>
+                <small style="display:block">Created: {{todo.created}}</small>
 
             </li>
                 </div>
