--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -14,7 +14,7 @@
 {% endfor %}
 {% endif %}
 
-<div class="container" style="min-height:90%;height:100vh;margin:0 auto;width:85%">
+<div class="container" style="height:100vh;margin:0 auto;width:85%">
 
     <div class="row">
 
