--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
             <ul class="list-unstyled list-inline" style="color:white;margin-left:0.5em;margin-right:3em">
             <li class="list-inline-item navitem"><a class="navbar-brand" href="#">Nkunzi</a></li>
                 <li class="list-inline-item navitem"><a href="/" class="text-white" style="margin-right:3em;text-decoration:none">blog</a></li>
-                 <li class="list-inline-item navitem"><a href="/" class="text-white" style="margin-right:3em;text-decoration:none">books</a></li>
+                 <li class="list-inline-item navitem"><a href="{% url 'books:home' %}" class="text-white" style="margin-right:3em;text-decoration:none">books</a></li>
 
 
             </ul>
