--- a/templates/todo_app/footer.html
+++ b/templates/todo_app/footer.html
@@ -1,5 +1,5 @@
 
-<fieldset style="background-color:#333;color:white;" class="row thefooter m-0" style='position:absolute;bottom:0;left:0'>
+<fieldset style="background-color:#333;color:white;" class="row thefooter m-0" style='position:relative;bottom:0;left:0'>
     <footer class="footer" >
         <center><small class="fprint">Copyright&copy; all rights reserved</small><br>
             <small>Created by Abigail Molusi 2021</small>
