--- a/templates/books/home.html
+++ b/templates/books/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title%}books_app{% endblock %}
+{% block title%}books{% endblock %}
 {% block content %}
 
 {% include 'books/navbar.html' %}
