--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -14,7 +14,7 @@
 {% endfor %}
 {% endif %}
 
-<div class="container" style="height:100vh;margin:0 auto;width:85%;min-height:95%">
+<div class="container" style="height:100vh;margin:20px auto;width:85%;min-height:95%">
 
     <div class="row">
 
@@ -31,7 +31,7 @@
     {% if todos %}
 
 
-<div class="container">
+
     <div class="row">
         <center><h3>My todos</h3></center>
     </div>
@@ -77,7 +77,7 @@
 
 {% endif %}
 
-</div>
+
 </div>
 </div>
 {% include 'todo_app/footer.html' %}
