--- a/templates/todo_app/footer.html
+++ b/templates/todo_app/footer.html
@@ -1,8 +1,9 @@
-
-<fieldset style="background-color:#333;color:white;" class="row" style='position:relative;bottom:0;left:0'>
+<div class="row" style='position:relative;bottom:0;left:0'>
+<fieldset style="background-color:#333;color:white;">
     <footer class="footer" >
         <center><small class="fprint">Copyright&copy; all rights reserved</small><br>
             <small>Created by Abigail Molusi 2021</small>
         </center>
     </footer>
 </fieldset>
+ <div>
