--- a/templates/todo_app/footer.html
+++ b/templates/todo_app/footer.html
@@ -1,4 +1,4 @@
-<div class="row" style='position:absolute;bottom:0;left:0'>
+<div class="row">
 <fieldset style="background-color:#333;color:white;">
     <footer class="footer" >
         <center><small class="fprint">Copyright&copy; all rights reserved</small><br>
