--- a/templates/books/navbar.html
+++ b/templates/books/navbar.html
@@ -4,7 +4,7 @@
             <ul class="list-inline">
             <li class="list-inline-item"><a class="navbar-brand" href="#">The books App</a></li>
 
-            <li class="list-inline-item"><a class="navbar-brand" href="{% url '/' %}">Home</a></li>
+            <li class="list-inline-item"><a class="navbar-brand" href="{% url 'blog:home' %}">Blog</a></li>
             <li class="list-inline-item"><a class="navbar-brand" href="{% url 'books:contact' %}">Contact us</a></li>
              </ul>
 
