--- a/templates/todo_app/footer.html
+++ b/templates/todo_app/footer.html
@@ -1,9 +1,6 @@
-<div class="row">
-<fieldset style="background-color:#333;color:white;">
-    <footer class="footer" >
-        <center><small class="fprint">Copyright&copy; all rights reserved</small><br>
-            <small>Created by Abigail Molusi 2021</small>
-        </center>
-    </footer>
-</fieldset>
- <div>
+
+    <footer class="py-5 bg-dark mt-5">
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Created by Abigail Molusi 2021</p>
+    </div>
+
+
