--- a/templates/todo_app/footer.html
+++ b/templates/todo_app/footer.html
@@ -1,6 +1,6 @@
 
-    <footer class="py-1 bg-dark mt-5" style="max-height:5%" >
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Created by Abigail Molusi 2021</p>
+    <footer class="py-1 bg-dark mt-5"  >
+    <div ><p class="m-0 text-center text-white">Copyright &copy; Created by Abigail Molusi 2021</p>
     </div>
 
 
