--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -35,7 +35,7 @@
     <div class="row">
         <center><h3>My todos</h3></center>
     </div>
-<div class="col-12 md-6 sm-12 p-5 m-2 ">
+<div class="col-md-8">
 
 
         <ul class="list-unstyled">
