--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -14,7 +14,7 @@
 {% endfor %}
 {% endif %}
 
-<div class="container" style="height:100vh;margin:20px auto;width:85%;">
+<div class="container" style="height:95%;margin:20px auto;width:85%;">
 
     <div class="row">
 
@@ -35,7 +35,7 @@
     <div class="row">
         <center><h3>My todos</h3></center>
     </div>
-<div class="col-md-8">
+<div class="col-md-8 mx-5" style='margin:20px auto'>
 
 
         <ul class="list-unstyled">
