--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -32,10 +32,11 @@
 
 
 
-    <div class="row">
+   
+<div class="col-md-8 offet-2" style='margin:20px auto'>
+     <div class="row">
         <center><h3>My todos</h3></center>
     </div>
-<div class="col-md-8 mx-5" style='margin:20px auto'>
 
 
         <ul class="list-unstyled">
