--- a/templates/books/search.html
+++ b/templates/books/search.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 {% include 'books/navbar.html' %}
-<div class="container">
+<div class="container " style="margin:0 auto">
     <div class="row">
      <div class="col m-1">
 
