--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -26,7 +26,7 @@
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" href="{% url 'blog:home' %}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'todo_app:index' %}">Todos</a></li>
                 {% if request.user.is_authenticated %}
                 <li class="nav-item"><a class="nav-link" href="{% url 'blog:myposts' %}">My posts</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'blog:existingprofile' request.user.id %}">My
