--- a/templates/books/home.html
+++ b/templates/books/home.html
@@ -6,8 +6,21 @@
 <div class="container" style="height:95%;width:75%;margin:0 auto">
 
 
-{% include 'books/searchfunction.html' %}
+  <div class="row">
+        <div class="col md-5 m-5 search">
 
+            <h1 style="color:orangered">Search for a book</h1>
+            <form action="https://www.pdfdrive.com/">
+                <div class="search-block row">
+                    <div class="col-md-6">
+                <span><input class="pt-1 pb-1" name="q" type="text">
+                <button class="btn pt-1 pb-1 btn-md btn-primary mt-0" type="submit">Search</button></span>
+                    </div>
+                 </div>
+            <form>
+
+        </div>
+ </div>
 
   
 
