--- a/templates/books/home.html
+++ b/templates/books/home.html
@@ -6,8 +6,8 @@
 <div class="container" style="height:100vh;width:75%;margin:0 auto">
 
 
-  <div class="row">
-        <div class="col md-6 offset-3 search">
+  <div class="container" style="align-items:center">
+        <div class="col md-6 " style="margin:40px auto">
             <a href="https://www.pdfdrive.com/"><h1 style="color:orangered">Search for a book</h1></a>          
         </div>
  </div>
