--- a/templates/books/home.html
+++ b/templates/books/home.html
@@ -8,7 +8,7 @@
 
   <div class="container" style="align-items:center">
         <div class="col md-6 " style="margin:40px auto">
-            <a href="https://www.pdfdrive.com/"><h1 style="color:orangered">Search for a book</h1></a>          
+            <a href="https://www.pdfdrive.com/" target="_blank"><h1 style="color:orangered">Search for a book</h1></a>          
         </div>
  </div>
 
