--- a/templates/books/navbar.html
+++ b/templates/books/navbar.html
@@ -2,7 +2,7 @@
     <div class="row">
         <nav class="navbar navbar-dark bg-dark p-0">
             <ul class="list-inline">
-            <li class="list-inline-item"><a class="navbar-brand" href="#">The books App</a></li>
+            <li class="list-inline-item"><a class="navbar-brand" href="#">Safe Space</a></li>
 
             <li class="list-inline-item"><a class="navbar-brand" href="{% url 'blog:home' %}">Blog</a></li>
             <li class="list-inline-item"><a class="navbar-brand" href="{% url 'books:contact' %}">Contact us</a></li>
