--- a/templates/books/home.html
+++ b/templates/books/home.html
@@ -3,7 +3,7 @@
 {% block title%}books{% endblock %}
 {% block content %}
 {% include 'books/navbar.html' %}
-<div class="container" style="height:100vh;width:75%;margin:0 auto">
+<div class="container" style="height:100vh;width:75%;margin:0 auto;align-items:center">
 
 
   <div class="container" style="align-items:center">
