--- a/templates/books/home.html
+++ b/templates/books/home.html
@@ -6,8 +6,8 @@
 <div class="container" style="height:100vh;width:75%;margin:0 auto;align-items:center">
 
 
-  <div class="container" style="align-items:center">
-        <div class="col md-6 " style="margin:40px auto">
+  <div class="container" style="align-items:center;margin:40px auto">
+        <div class="col md-6 " >
             <a href="https://www.pdfdrive.com/" target="_blank"><h1 style="color:orangered">Search for a book</h1></a>          
         </div>
  </div>
