--- a/templates/books/home.html
+++ b/templates/books/home.html
@@ -7,7 +7,7 @@
 
 
   <div class="container" style="align-items:center;margin:40px auto">
-        <div class="col md-6 " >
+        <div class="col md-6 offset-3" >
             <a href="https://www.pdfdrive.com/" target="_blank"><h1 style="color:orangered">Search for a book</h1></a>          
         </div>
  </div>
