--- a/templates/blog/myposts.html
+++ b/templates/blog/myposts.html
@@ -6,7 +6,7 @@
 
 
 
-<div class="container" style="height:115vh">
+<div class="container" style="height:auto">
 <div class="row mx-5 mt-5">
     <a href="{% url 'blog:article-create' %}" class="pb-3" >Add article</a>
 </div>
@@ -32,7 +32,7 @@
 
             {% else %}
 
-            <div class="col-md-6 px-1 py-4">
+            <div class="col-md-8 px-1 py-4">
                 <h2 class="card-title mx-5"><center><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></center></h2>
             {% endif %}
 
