--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -14,7 +14,7 @@
 {% endfor %}
 {% endif %}
 
-<div class="container" style="height:95%;margin:20px auto;width:85%;">
+<div class="container" style="height:auto;margin:20px auto;width:85%;">
 
     <div class="row">
 
