--- a/templates/blog/existing_profile.html
+++ b/templates/blog/existing_profile.html
@@ -13,7 +13,7 @@
                      style="display:flex;flex-direction:column;justify-content:center;align-items:center">
                     <b>{{ userprofile.preffered_name|title }}</b>
                     <img class="rounded-cirle " src="{{ userprofile.profilepic.url }}"
-                         style="width:200px;height:200px;border-radius:50%;">
+                         style="width:200px;height:200px;border-radius:50%;" alt="Profile image">
 
 
                     <p class="text-secondary my-2">{{ userprofile.about }}</p>
