--- a/templates/todo_app/footer.html
+++ b/templates/todo_app/footer.html
@@ -1,6 +1,7 @@
 
-    <footer class="py-3 bg-dark mt-5"  >
+    <footer class="py-3 bg-dark mt-5" style="position:absolute;bottom:0;width:100%;height:60px">
     <div ><p class="m-0 text-center text-white">Copyright &copy; Created by Abigail Molusi 2021</p>
     </div>
+    </footer>
 
 
