--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html style="position:relative">
+<!DOCTYPE html >
 {% load static %}
 
 <html lang="en">
@@ -14,7 +14,7 @@
 
 
 </head>
-<body >
+<body style="position:relative">
 
 {% block content %}
 
