--- a/templates/todo_app/footer.html
+++ b/templates/todo_app/footer.html
@@ -1,5 +1,5 @@
 
-    <footer class="py-3 bg-dark mt-5 mb-0" style="width:100%;height:60px">
+    <footer class="py-3 bg-dark mt-5 mb-0">
     <div ><p class="m-0 text-center text-white">Copyright &copy; Created by Abigail Molusi 2021</p>
     </div>
     </footer>
