--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -18,7 +18,7 @@
 
     <div class="row">
 
-        <fieldset class="m-2 col-12 md-6 sm-4">
+        <fieldset class="m-2 col-12 md-6 sm-8">
 
             <form method="POST" action="{% url 'todo_app:add_todo' %}" class="m-2">
                 {% csrf_token %}
@@ -33,7 +33,7 @@
 
 
    
-<div class="col-md-8 offet-2" style='margin:20px auto'>
+<div class="col-md-6 sm-8 offet-2" style='margin:20px auto'>
      <div class="row">
         <center><h3>My todos</h3></center>
     </div>
