--- a/templates/todo_app/footer.html
+++ b/templates/todo_app/footer.html
@@ -1,6 +1,6 @@
 
     <footer class="py-3 bg-dark mt-5 mb-0">
-    <div ><p class="m-0 text-center text-white">Copyright &copy; Created by Abigail Molusi 2021</p>
+    <div ><center><p class="py-2 my-2 text-center text-white" style="width:60%;margin:5px auto">Copyright &copy; Created by Abigail Molusi 2021</p></center>
     </div>
     </footer>
 
