--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -16,9 +16,9 @@
 
 <div class="container" style="height:auto;margin:20px auto;width:85%;">
 
-    <div class="row">
+    <div class="row" style="display:flex;justify-content:center">
 
-        <fieldset class="m-2 col-md-8 sm-4 offset-2" style="margin:10px auto" >
+        <fieldset class="m-2 col-md-8 sm-4 " style="margin:10px auto" >
 
             <form method="POST" action="{% url 'todo_app:add_todo' %}" class="m-2">
                 {% csrf_token %}
