--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -33,10 +33,8 @@
 
 
    
-<div class="col-md-8 sm-4" style='margin:20px auto'>
-     <div class="row">
-        <center><h3>My todos</h3></center>
-    </div>
+<div class="col-md-8 sm-4" style='margin:20px auto;display:flex;flex-direction:column;'>
+    
 
 
         <ul class="list-unstyled">
