--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -16,7 +16,7 @@
 
 <div class="container" style="height:auto;margin:20px auto;width:85%;">
 
-    <div class="container" style="display:flex;flex-direction:column;justify-content:space-between">
+    <div class="container" style="display:flex;flex-direction:column;justify-content:space-between;align-items:center">
 
         <fieldset class="m-2 col-md-8 sm-4 " style="margin:10px auto" >
 
