--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -27,7 +27,7 @@
             </form>
         </fieldset>
         
-       {% if empty %}
+       {% empty %}
 <div class="alert alert-info" role="alert">
     <p>Looks like you don't have anything in your todo list..add a few items..</p>
 </div>
@@ -75,8 +75,6 @@
 
 
 
-
-{% endif %}
 
 
 </div>
