--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -16,7 +16,7 @@
 
 <div class="container" style="height:auto;margin:20px auto;width:85%;">
 
-    <div class="container" style="display:flex;flex-direction:column;justify-content:space-between;align-items:center">
+    <div class="container" style="display:flex;flex-direction:column;justify-content:auto;align-items:center">
 
         <fieldset class="m-2 col-md-8 sm-4 " style="margin:0 auto;border-radius:8px" >
 
@@ -27,13 +27,10 @@
             </form>
         </fieldset>
         
-       {% empty %}
-<div class="alert alert-info" role="alert">
-    <p>Looks like you don't have anything in your todo list..add a few items..</p>
-</div>
+
     
 
-    {% else %}
+    {% if todos %}
 
 
 
@@ -75,7 +72,11 @@
 
 
 
-
+       {% else %}
+<div class="alert alert-info" role="alert">
+    <p>Looks like you don't have anything in your todo list..add a few items..</p>
+</div>
+{% endif %}
 
 </div>
 </div>
