--- a/templates/todo_app/index.html
+++ b/templates/todo_app/index.html
@@ -56,7 +56,7 @@
 
 
             </a>
-                <small style="display:inline-block;max-width:40%;font-size:0.6rem">Created: {{todo.created}}</small>
+                <small style="display:block;max-width:40%;font-size:0.6rem">Created: {{todo.created}}</small>
 
             </li>
                 </div>
