--- a/templates/blog/articledetail.html
+++ b/templates/blog/articledetail.html
@@ -3,26 +3,18 @@
 {% static "images" as baseUrl %}
 {% block content %}
 
-{% if messages %}
-{% for message in messages %}
-<div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-    <button onclick="cloze()" type="button" class="btn close cloze" data-dismiss="alert" aria-label="close"><span
-            aria-hidden="true"><b>x</b></span></button>
-    {{ message }}
-</div>
-{% endfor %}
-{% endif %}
-<div class="container my-5" style="height:150vh;margin;max-width:90%;min-height:90%;">
 
+<div id="container" class="container my-5" style="max-width:90%;">
+<div id="main">
 <div class="row">
     {% if article.image %}
     <div class="col-md-4 ">
-        <h1 class="card-title"><center>{{ article.title }}</center></h1>
+        <h1 class="card-title mb-1"><center>{{ article.title }}</center></h1>
 
         <a href="{{ article.image.url }}" target="_blank"><img class="card-img-top" src="{{ article.image.url }}" width="200px" height="350px" alt="..."/></a>
 
     </div>
-  <div class="col-md-8 px-4 py-4" >
+  <div class="col-md-8 px-4 py-2 mt-5" >
         {{ article.content }}
     </div>
 <div class="card-body">
@@ -32,6 +24,7 @@
     </div>
 </div>
 </div>
+
      {% else %}
     <div class="row mb-5">
         <div >
@@ -46,9 +39,9 @@
 </div>
     </div>
 {% endif %}
+<div>
 
-
-<div class="col-md-3" style="display:flex;justify-content:space-around;align-items:center">
+    <div class="col-md-3 my-3" style="display:flex;justify-content:space-around;align-items:center">
     <a href="{{request.META.HTTP_REFERER|escape}}">Back</a><a href="{% url 'blog:home' %}" >Home</a>
     {% if request.user.email == article.author.user.email %}
 
@@ -57,11 +50,45 @@
 
     {% endif %}
 </div>
+        {% if comments %}
+        <div class="mx-2">
+        <P><b>Comments</b></P>
+        </div>
+        <ul class="list-unstyled">
+        <div>
+            {% for comment in comments %}
+            <div class="row my-2" ><li class="my-0"><a class="my-0" href="{% url 'blog:existingprofile' article.author.user.id %}" style="text-decoration:none">
+            {{ comment.author.preffered_name|title }}</a>: {{ comment.content }}</li>
+
+
+            {% if comment.author.user == request.user or article.author.user == request.user %}
+                <span class="my-0"><a href="{% url 'blog:comment_delete' comment.id %}" class="mt-0" style="font-size:0.7rem;color:green">delete</a>{% endif %}{% if comment.author.user == request.user %}{% csrf_token %}<a href="{% url 'blog:comment_update' comment.id %}" class="mx-2 my-0" style="font-size:0.7rem;color:green">edit</a>{% endif %}</span>
+            </div>
+            {% endfor %}
+
+        </div>
+        </ul>
+        {% endif %}
+        {% if user.is_authenticated %}
+        <form action="." method="POST">
+            {% csrf_token %}
+            <div class="input-group ">
+                {{ form.content }}
+                    <div class="input-group-append">
+                   <button class="btn btn-primary" id="button-submit" type="submit" >Post</button>
+                    </div>
+            </div>
+
+        </form>
+        {% endif %}
+    </div>
+
+
             </div>
 
   </div>
 </div>
-
+</div>
 
 
 {% endblock %}
