--- a/templates/blog/myposts.html
+++ b/templates/blog/myposts.html
@@ -15,7 +15,7 @@
 
 {% for article in articles %}
 
-<div class="container" style="padding-top:5rem;display:flex;flex-direction:column;flex-wrap:wrap;max-height:100%">
+<div class="container" style="padding-top:5rem;display:flex;flex-direction:column;flex-wrap:wrap;max-height:100%;auto-flow:auto">
 
     <div class="card mb-2 col-md-7">
         <div class="col md-12" style="display:flex">
