--- a/templates/blog/myposts.html
+++ b/templates/blog/myposts.html
@@ -19,14 +19,16 @@
 
     <div class="card mb-2 col-md-7" style="overflow:auto" >
         <div class="col-12">
-            {% if article.image %}
+           <p> {% if article.image %}
         <div class="col-md-6">
 
         <h2 class="card-title h4"><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h2>
 
         <a href="{{ article.image.url }}" target="_blank"><img class="card-img-top" src="{{ article.image.url }}" width="200px" style="float:left"  height="350px" alt="supporting image" /></a>
 <div class="small text-muted m-2">{{ article.created }}</div>
-        </div>
+        </div> <span class="mb-1 mt-1 mx-4" >{{ article.content }}</span>
+                <span>{{ article.created }}</span>
+</p>
 
             {% else %}
 
@@ -35,6 +37,7 @@
             {% endif %}
 
               <p class="mb-1 mt-1 mx-4" >{{ article.content }}</p>
+                <p>{{ article.created }}</p>
 
 
             </div>
