--- a/templates/blog/myposts.html
+++ b/templates/blog/myposts.html
@@ -24,8 +24,10 @@
 
         <h2 class="card-title h4"><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h2>
 
-        <p class="mb-1 mt-1 mx-4" >{{ article.content }}<a href="{{ article.image.url }}" target="_blank"><img class="card-img-top" src="{{ article.image.url }}" width="200px" style="float:left"  height="350px" alt="supporting image" /></a>
-<div class="small text-muted m-2">{{ article.created }}</div>
+        <p class="mb-1 mt-1 mx-4 " ><a href="{{ article.image.url }}" target="_blank"><img class="card-img-top mx-4" src="{{ article.image.url }}" width="200px" style="float:left"  height="350px" alt="supporting image" /></a>
+          {{ article.content }}</p>
+            
+       
         
 
 
@@ -33,9 +35,10 @@
 
             <div class="col-md-8 px-1 py-4">
                 <h2 class="card-title mx-5"><center><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></center></h2>
+                 <p>{{ article.content }}</p>
             {% endif %}
 
-              </p>
+              
                 <p>{{ article.created }}</p>
 
 
