--- a/templates/blog/myposts.html
+++ b/templates/blog/myposts.html
@@ -18,14 +18,14 @@
 <div class="container" style="padding-top:5rem;height:auto;overflow:auto">
 
     <div class="card mb-2 col-md-7" style="overflow:auto" >
-        <div class="col-12">
+        <div class="col-12 p-4">
             {% if article.image %}
         
 
-        <h2 class="card-title h4"><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h2>
+        <h2 class="card-title h4" style="text-align:center"><a href="{{ article.get_absolute_url }}">{{ article.title.title }}</a></h2>
 
-        <p class="mb-1 mt-1 mx-4 " ><a href="{{ article.image.url }}" target="_blank"><img class="card-img-top mx-4" src="{{ article.image.url }}" width="200px" style="float:left"  height="350px" alt="supporting image" /></a>
-          {{ article.content }}</p>
+        <a href="{{ article.image.url }}" target="_blank"><img class="card-img-top m-4" src="{{ article.image.url }}" width="160px"  height="300px" alt="supporting image" /></a>
+          <p class="mb-1 mt-1 mx-4" >{{ article.content }}</p>
             
        
         
@@ -39,7 +39,7 @@
             {% endif %}
 
               
-                <p>{{ article.created }}</p>
+                <small class="mb-1 mt-1 mx-4">{{ article.created }}</small>
 
 
             </div>
