--- a/templates/blog/myposts.html
+++ b/templates/blog/myposts.html
@@ -18,14 +18,20 @@
 <div class="container" style="padding-top:5rem;height:auto;overflow:auto">
 
     <div class="card mb-2 col-md-7" style="overflow:auto" >
-        <div class="col-12 p-4">
+        <div class="col-12 p-3">
             {% if article.image %}
         
+<div class="row">
+    {% if article.image %}
+    <div class="col-md-4 ">
+        <h1 class="card-title mb-1"><center>{{ article.title }}</center></h1>
 
-        <h2 class="card-title h4" style="text-align:center"><a href="{{ article.get_absolute_url }}">{{ article.title.title }}</a></h2>
+        <a href="{{ article.image.url }}" target="_blank"><img class="card-img-top" src="{{ article.image.url }}" width="200px" height="350px" alt="..."/></a>
 
-        <a href="{{ article.image.url }}" target="_blank"><img class="card-img-top m-4" src="{{ article.image.url }}" width="160px"  height="300px" alt="supporting image" /></a>
-          <p class="mb-1 mt-1 mx-4" >{{ article.content }}</p>
+    </div>
+  <div class="col-md-8 px-4 py-2 mt-5" >
+        {{ article.content }}
+    </div>
             
        
         
