--- a/templates/blog/myposts.html
+++ b/templates/blog/myposts.html
@@ -15,9 +15,9 @@
 
 {% for article in articles %}
 
-<div class="container" style="padding-top:5rem;height:auto;overflow:auto">
+<div class="container" style="padding-top:5rem;height:auto;overflow:auto;width:100%">
 
-    <div class="card mb-2 col-md-7" style="overflow:auto" >
+    <div class="card mb-2 col-md-12" style="overflow:auto" >
             
         
 <div class="row">
@@ -42,7 +42,7 @@
 
             {% else %}
 
-            <div class="col-md-8 px-1 py-4">
+            <div class="col-md-10 px-1 py-4">
                 <h2 class="card-title mx-5"><center><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></center></h2>
                  <p>{{ article.content }}</p>
             {% endif %}
