--- a/templates/accounts/person_login.html
+++ b/templates/accounts/person_login.html
@@ -13,7 +13,7 @@
 
 
 
-    <div class="col-md-6 col-sm-10 mt-2" style="display:flex;flex-direction:column;align-items:center;justify-content:center">
+    <div class="col-12 mt-2" style="display:flex;flex-direction:column;align-items:center;justify-content:center">
          <div class="row my-3 ">
 
 
